<menu xmlns:android="http://schemas.android.com/apk/res/android" >

        <item android:id="@+id/search_menu"
          android:icon="@drawable/ic_action_search_dark"
          android:title="Search"
          android:showAsAction="ifRoom|collapseActionView"
      />
       
       <item android:id="@+id/share_menu"
          android:icon="@drawable/ic_action_share"
          android:title="@string/share_app_menu"
           android:showAsAction="never"
      />
       
     <item
        android:id="@+id/feedback_menu"
        android:icon="@drawable/ic_action_good"
        android:showAsAction="never"
        android:title="@string/feedback_drawer"
        />
     
   
            
      <item
        android:id="@+id/exit_menu"
        android:orderInCategory="100"
        android:showAsAction="never"
        android:title="@string/exit"
        android:icon="@drawable/ic_action_cancel"
        />
     
    
</menu>
