<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical" >

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_marginLeft="20dp"
        android:layout_marginRight="20dp"
        android:scrollbars="none" >

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical" >

            <TextView
                android:id="@+id/textView1"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="30dp"
                android:layout_marginBottom="5dp"
                android:text="@string/word_of_the_day"
                android:textAppearance="?android:attr/textAppearanceMedium"
                android:textColor="@color/black" />

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="10dp"
                android:background="@color/word_background" >

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_margin="10dp" >

                    <TextView
                        android:id="@+id/eng_word_tv"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/loading"
                        android:textAppearance="?android:attr/textAppearanceMedium"
                        android:textColor="@color/dark_orange" />

                    <TextView
                        android:id="@+id/equal_sign"
                          android:layout_marginLeft="5dp"
                        android:layout_marginRight="5dp"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/equal_sign"
                        android:textAppearance="?android:attr/textAppearanceMedium"
                        android:textColor="@color/dark_orange"
                        android:visibility="gone" />

                    <TextView
                        android:id="@+id/hin_word_tv"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                          android:layout_marginRight="5dp"
                        android:text="@string/loading"
                        android:textAppearance="?android:attr/textAppearanceMedium"
                        android:textColor="@color/dark_orange"
                        android:visibility="gone" />
                </LinearLayout>
            </LinearLayout>

            <TextView
                android:id="@+id/usage"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginBottom="5dp"
                android:layout_marginTop="10dp"
                android:text="@string/usage"
                android:textAppearance="?android:attr/textAppearanceMedium"
                android:textColor="@color/black" />

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="10dp"
                android:background="@color/word_background"
                android:padding="10dp" >

                <TextView
                    android:id="@+id/word_usage"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/loading"
                    android:textAppearance="?android:attr/textAppearanceMedium"
                    android:textColor="@color/black" />
            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="15dp"
                android:layout_marginTop="15dp" >

                <CheckBox
                    android:id="@+id/notification_cb"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:button="@layout/custom_checkbox_design"
                    android:checked="true"
                />
                <TextView
                    android:id="@+id/textView5"
                    android:padding="2dp"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/subscribe_to_daily_word_of_day"
                    android:textAppearance="?android:attr/textAppearanceMedium"
                    android:textColor="@color/black" />
            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="10dp" >

                <Button
                    android:id="@+id/save_this_word"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:background="@color/sky_blue_background"
                    android:text="@string/save_this_word"
                    android:textColor="@color/White" />
            </LinearLayout>
        </LinearLayout>
    </ScrollView>

</LinearLayout>