<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical" >

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_marginLeft="5dp"
        android:layout_marginRight="5dp"
        android:scrollbars="none" >

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical" >

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="10dp"
                android:orientation="horizontal" >

                <HinKhoj.Hindi.KeyBoard.HindiEditText
                    android:id="@+id/spellET"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="6"
                    android:background="@android:drawable/editbox_background"
                    android:hint="@string/type"
                    android:imeOptions="actionSearch"
                    android:inputType="textNoSuggestions"
                    android:singleLine="true"
                    android:textColor="@color/black" />

                <Button
                    android:id="@+id/check_spell_btn"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:background="@color/sky_blue_background"
                    android:padding="10dp"
                    android:text="@string/check"
                    android:textColor="@color/White" />
            </LinearLayout>

            <include
                android:id="@+id/kbhelpId"
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                layout="@layout/hindihelp"
                android:visibility="gone" />

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="5dp"
                android:background="@drawable/type_in_hindi_background" >

                <HinKhoj.Hindi.Android.Common.HindiCheckBox
                    android:id="@+id/cbh"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginLeft="15dp"
                    android:button="@layout/custom_checkbox_design"
                    android:text="@string/type_in_hindi"
                    android:textColor="@color/blue" />
            </LinearLayout>

            <ProgressBar
                android:id="@+id/searchProgressBar"
                style="?android:attr/progressBarStyleHorizontal"
                android:layout_width="match_parent"
                android:layout_height="5dp"
                android:indeterminateOnly="true"
                android:visibility="gone" />

            <TextView
                android:id="@+id/search_message"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginLeft="10dp"
                android:layout_marginRight="10dp"
                android:layout_marginTop="10dp"
                android:text="@string/please_wait"
                android:textColor="@color/off_black"
                android:textSize="@dimen/medium_text_size"
                android:visibility="gone" />

            <LinearLayout
                android:id="@+id/correct_spell_ll"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="20dp"
                android:background="@color/pronunciation_text_color"
                android:orientation="horizontal"
                android:padding="10dp"
                android:visibility="gone" >

                <ImageView
                    android:id="@+id/imageView1"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center_vertical"
                    android:layout_marginLeft="10dp"
                    android:src="@drawable/green_checkmark_small" />

                <TextView
                    android:id="@+id/textView1"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center_vertical"
                    android:layout_marginLeft="10dp"
                    android:text="@string/correct_spelling"
                    android:textAppearance="?android:attr/textAppearanceMedium"
                    android:textColor="@color/black" />
            </LinearLayout>

            <LinearLayout
                android:id="@+id/wrong_spell_ll"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="20dp"
                android:layout_marginTop="20dp"
                android:background="@color/pronunciation_text_color"
                android:orientation="horizontal"
                android:padding="10dp"
                android:visibility="gone" >

                <ImageView
                    android:id="@+id/imageView1"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center_vertical"
                    android:layout_marginLeft="10dp"
                    android:background="@drawable/wrong_word" />

                <TextView
                    android:id="@+id/textView2"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center_vertical"
                    android:layout_marginLeft="10dp"
                    android:text="@string/options_for_wrong_spelling_of_word"
                    android:textAppearance="?android:attr/textAppearanceMedium"
                    android:textColor="@color/black" />
            </LinearLayout>

            <LinearLayout
                android:id="@+id/similar_words_list_layout"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="20dp"
                android:orientation="vertical"
                android:visibility="gone" >

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/similar_words"
                    android:textColor="@color/black" />

                <ListView
                    android:id="@+id/similar_words_list"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginBottom="20dp"
                    android:background="@color/list_background"
                    android:divider="@drawable/list_divider" >
                </ListView>
            </LinearLayout>
        </LinearLayout>
    </ScrollView>

</LinearLayout>