<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/background"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context=".MainActivity" >

    <ImageView
        android:id="@+id/imageView1"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="@dimen/activity_vertical_margin"
        android:src="@drawable/congigure_logo" />

    <TextView
        android:id="@+id/please_wait"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_centerInParent="true"
        android:text="@string/please_wait"
        android:textColor="@color/black"
        android:textSize="@dimen/large_text_size" />

    <TextView
        android:id="@+id/configuration_message"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@id/please_wait"
        android:layout_centerInParent="true"
        android:text="@string/offline_dictionary_configuration_message"
        android:textColor="@color/off_black"
        android:textSize="@dimen/small_text_size" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/configuration_message"
        android:layout_margin="10dp"
        android:orientation="vertical" >

        <ProgressBar
            android:id="@+id/progressBar"
            style="?android:attr/progressBarStyleHorizontal"
            android:layout_width="match_parent"
            android:layout_height="5dp"
            android:progressDrawable="@drawable/custom_progress_bar" />

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="2dp"
            android:background="@color/progress_bar_bottom_color" >
        </RelativeLayout>
    </LinearLayout>

    <Button
        android:id="@+id/cancelButton"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:layout_centerInParent="true"
        android:background="@color/sky_blue_background"
        android:padding="@dimen/padding_medium"
        android:text="@string/cancel"
        android:textColor="@color/white" />

</RelativeLayout>